@@ -675,7 +675,7 @@ name|managedSchemaPath
 init|=
 name|zkLoader
 operator|.
-name|getCollectionZkPath
+name|getConfigSetZkPath
 argument_list|()
 operator|+
 literal|"/"
@@ -1258,7 +1258,7 @@ name|nonManagedSchemaPath
 init|=
 name|zkLoader
 operator|.
-name|getCollectionZkPath
+name|getConfigSetZkPath
 argument_list|()
 operator|+
 literal|"/"
@@ -1741,7 +1741,7 @@ name|nonManagedSchemaPath
 init|=
 name|zkLoader
 operator|.
-name|getCollectionZkPath
+name|getConfigSetZkPath
 argument_list|()
 operator|+
 literal|"/"
