@@ -266,7 +266,7 @@ name|managedSchemaPath
 operator|=
 name|zkLoader
 operator|.
-name|getCollectionZkPath
+name|getConfigSetZkPath
 argument_list|()
 operator|+
 literal|"/"
